[project]
name = "trading-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.4",
    "colorama>=0.4.6",
    "fastmcp>=1.0",
    "mcp[cli]>=1.6.0",
    "smolagents[litellm,mcp]>=1.13.0",
    "yfinance>=0.2.55",
]
